= 1.6.9 (2017-04-24) = * Fixed: Deprecated WooCommerce functions and backward compatibility to 2.6 * Fixed: Break styles on variations downloadable products. * Fixed: Bug on coupons with PHP 7<br />https://wordpress.org/support/topic/using-coupon-leads-to-an-error-with-php-7-1/#post-9051916
git-svn-id: http://plugins.svn.wordpress.org/woocommerce-product-price-based-on-countries/trunk@1644124 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -9,10 +9,12 @@
 	margin-right: 20px;
 }
 
-.woocommerce_variable_attributes .wcpbc_pricing{	
-	padding-right:10px;
-	border-top:1px solid #eee;
-	overflow: auto;
+.woocommerce_variable_attributes .wcpbc_pricing{    
+    padding-right:10px;
+    border-top:1px solid #eee;
+    overflow: auto;
+    display: block;
+    clear: both;
 }
 
 .woocommerce_variable_attributes .wcpbc_pricing .wcpbc_wrapper_variable_price_method li, .woocommerce_variable_attributes .wcpbc_pricing .wcpbc_wrapper_variable_sale_price_dates li {
