--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -68,3 +68,28 @@
     -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.2);
     box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 }
+
+.wcpbpc_addon_banner .dashicons {	
+	float:left;
+}
+.wcpbpc_addon_banner .feature_text {
+	display: block;
+    margin-left: 25px;
+}
+
+.wcpbpc_addon_banner .dashicons.dashicons-star-filled{
+	color: rgb(213, 78, 33);
+}
+
+.wcpbpc_addon_banner .dashicons.dashicons-yes{
+	color: #46b450;
+}
+
+.wcpbpc_addon_banner_features {
+	padding: 20px;
+}
+.wc_addons_wrap .products ul.wcpbpc_addon_banner_features li {
+    float: none;
+	margin: 0 0 1em 0!important;
+	width:100%;
+}
