= 1.6.14 (2017-07-19) = * Fixed: Hide product data ads in default product types. * Fixed: Front-end prices for manual orders are deactivated, so manual orders does discrepancies between prices and currencies.
git-svn-id: http://plugins.svn.wordpress.org/woocommerce-product-price-based-on-countries/trunk@1698711 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -69,27 +69,32 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 }
 
-.wcpbpc_addon_banner .dashicons {	
+.wcpbc_addon_banner .dashicons {	
 	float:left;
 }
-.wcpbpc_addon_banner .feature_text {
+.wcpbc_addon_banner .feature_text {
 	display: block;
     margin-left: 25px;
 }
 
-.wcpbpc_addon_banner .dashicons.dashicons-star-filled{
+.wcpbc_addon_banner .dashicons.dashicons-star-filled{
 	color: rgb(213, 78, 33);
 }
 
-.wcpbpc_addon_banner .dashicons.dashicons-yes{
+.wcpbc_addon_banner .dashicons.dashicons-yes{
 	color: #46b450;
 }
 
-.wcpbpc_addon_banner_features {
+.wcpbc_addon_banner_features {
 	padding: 20px;
 }
-.wc_addons_wrap .products ul.wcpbpc_addon_banner_features li {
+
+.wc_addons_wrap .products ul.wcpbc_addon_banner_features li {
     float: none;
 	margin: 0 0 1em 0!important;
 	width:100%;
+}
+
+.wcpbc_product_data_ad {
+    display: none;
 }
